# cmake_omp_hello

./: CMakeLists-works-warn.txt  CMakeLists.txt  README.md  Readme.rwh  omp_hello.c
